# fractal-sfml

./: CMakeLists.txt
shaders/: estimators.glsl  main.frag  uv.frag
src/: camera.cpp  camera.hpp  config.hpp  eventhandler.cpp  eventhandler.hpp  events.cpp  events.hpp  helpers.cpp  helpers.hpp  inputhandler.cpp  inputhandler.hpp  main.cpp  quaternion.cpp  quaternion.hpp
